--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,26 +24,26 @@ jobs:
           python-version: '3.11'
       - run: python docs/sample.py
       # ADJUST THIS: install all dependencies (including pdoc)
-      # - run: pip install pdoc
+      - run: pip install pdoc
       # ADJUST THIS: build your documentation into docs/.
       # We use a custom build script for pdoc itself, ideally you just run `pdoc -o docs/ ...` here.
-      # - run: pdoc docs/sample.py 
+      - run: pdoc docs/sample.py -o ./docs
 
-      # - uses: actions/upload-pages-artifact@v2
-      #   with:
-      #     path: docs/
+      - uses: actions/upload-pages-artifact@v2
+        with:
+          path: docs/
 
   # Deploy the artifact to GitHub pages.
   # This is a separate job so that only actions/deploy-pages has the necessary permissions.
-  # deploy:
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   permissions:
-  #     pages: write
-  #     id-token: write
-  #   environment:
-  #     name: github-pages
-  #     url: ${{ steps.deployment.outputs.page_url }}
-  #   steps:
-  #     - id: deployment
-  #       uses: actions/deploy-pages@v2
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - id: deployment
+        uses: actions/deploy-pages@v2
