--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,11 +23,12 @@ jobs:
         with:
           python-version: '3.11'
       - run: python docs/sample.py
+      - run: python -c "from pathlib import Path; Path.cwd()"
       # ADJUST THIS: install all dependencies (including pdoc)
       - run: pip install pdoc
       # ADJUST THIS: build your documentation into docs/.
       # We use a custom build script for pdoc itself, ideally you just run `pdoc -o docs/ ..` here.
-      - run: pdoc -o docs/sample.py 
+      - run: pdoc docs/sample.py -o .
 
       - uses: actions/upload-pages-artifact@v2
         with:
