--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,16 +19,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v3
+      - name: Build with Jekyll
+        uses: actions/jekyll-build-pages@v1
+        with:
+          source: ./
+          destination: ./_site
       - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-      
-      # ADJUST THIS: install all dependencies (including pdoc)
       - run: pip install pdoc
-      # ADJUST THIS: build your documentation into docs/.
-      # We use a custom build script for pdoc itself, ideally you just run `pdoc -o docs/ ..` here.
       - run: pdoc docs/sample.py -o ./docs
-
       - uses: actions/upload-pages-artifact@v2
         with:
           path: docs/
